✨ prevent animation overflow

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -33,6 +33,5 @@
 
 [data-noise-anim="true"] [data-noise="canvas"] {
   animation: anim-noise var(--speed, 0.03s) linear alternate infinite;
-  width: var(--width, 1080px);
-  height: var(--height, 1080px);
+  height: calc(500px + 100%);
 }
